[tool.poetry]
name = "pool"
version = "0.1.0"
description = ""
authors = ["Sébastien NICOLET <snicolet@student.42.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
timeloop = "^1.0.2"
mongomodel = "^0.5.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
