[tool.poetry]
name = "pool"
version = "0.1.0"
description = ""
authors = ["Sébastien NICOLET <snicolet@student.42.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mongomodel = "0.5.2"
tabulate = "^0.8.7"
huey = "^2.3.0"
gevent = "^20.12.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
jedi = "<0.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
